--- a/src/components/SayItYourWayInput/styles.css
+++ b/src/components/SayItYourWayInput/styles.css
@@ -1,3 +1,21 @@
+label {
+  font-weight: bold;
+  margin-bottom: 5px;
+  display: block;
+}
+select {
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #e9ecff;
+  border-radius: 8px;
+  border: 1px solid #646cff;
+  cursor: pointer;
+  transition: border-color 0.25s;
+  color: #4d56ff;
+  width: 100%;
+}
 .input-container {
   display: flex;
   flex-direction: column;
@@ -17,20 +35,6 @@
   margin-top: 0.5em;
 }
 
-select {
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #e9ecff;
-  border-radius: 8px;
-  border: 1px solid #646cff;
-  cursor: pointer;
-  transition: border-color 0.25s;
-  color: #4d56ff;
-  width: 100%;
-}
-
 .select.disabled,
 input.disabled {
   background-color: #cdcccc;
@@ -39,70 +43,111 @@ input.disabled {
   border: 1px solid #888;
 }
 
+/* Base styles for the MultiSelect component */
+.siyw-select-container {
+  position: relative;
+  font-family: Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin-bottom: 1rem;
+}
 
-.custom-select-container {
-    position: relative;
-    width: 100%;
-    font-family: Arial, sans-serif;
-  }
-  
-  label {
-    font-weight: bold;
-    margin-bottom: 5px;
-    display: block;
-  }
-  
-  .custom-select-input {
-    border: 1px solid #646cff;
-    border-radius: 8px;
-    padding: 0.6em 1.2em;
-    font-size: 1em;
-    font-weight: 500;
-    background-color: #e9ecff;
-    color: #4d56ff;
-    cursor: pointer;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  .custom-select-dropdown {
-    position: absolute;
-    background-color: white;
-    border: 1px solid #646cff;
-    border-radius: 8px;
-    margin-top: 5px;
-    width: 100%;
-    max-height: 200px;
-    overflow-y: auto;
-    z-index: 10;
-  }
-  
-  .custom-select-option {
-    padding: 10px;
-    display: flex;
-    align-items: center;
-    color: #4d56ff;
-  }
-  
-  .custom-select-option input {
-    margin-right: 10px;
-  }
-  
-  .custom-select-option:hover {
-    background-color: #f0f0f0;
-  }
-  
-  .arrow {
-    margin-left: 10px;
-  }
-  
-  .overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: transparent;
-    z-index: 0;
-  }
+.siyw-select-input {
+  font-size: 1em;
+  font-weight: 500;
+  background-color: #e9ecff;
+  color: #4d56ff;
+  cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.75rem;
+  border-radius: var(--border-radius, 4px);
+  background-color: var(--background-color, white);
+  border: var(--border, 1px solid #ccc);
+}
+
+.siyw-select-input:hover {
+  border-color: var(--hover-border-color, #1976d2);
+}
+
+.siyw-select-dropdown {
+  position: absolute;
+  width: 100%;
+  top: 100%;
+  left: 0;
+  border: 1px solid #ccc;
+  border-radius: var(--border-radius, 4px);
+  background-color: var(--dropdown-background-color, white);
+  max-height: 200px;
+  overflow-y: auto;
+  z-index: 10;
+}
+
+.siyw-select-option {
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  color: #4d56ff;
+  cursor: pointer;
+}
+
+.siyw-select-option input {
+  margin-right: 10px;
+}
+
+.siyw-select-option:hover {
+  background-color: var(--hover-background-color, #f0f0f0);
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: transparent;
+  z-index: 0;
+}
+
+.arrow svg {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  width: 1em;
+  height: 1em;
+  display: inline-block;
+  vertical-align: middle;
+  flex-shrink: 0;
+  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  fill: currentColor;
+  font-size: 1.5rem;
+  pointer-events: none;
+  color: rgba(0, 0, 0, 0.54);
+}
+
+/* Standard Variant */
+.siyw-select-standard {
+  --background-color: white;
+  --border: 1px solid #ccc;
+  --hover-border-color: #1976d2;
+  --hover-background-color: #f0f0f0;
+}
+
+/* Filled Variant */
+.siyw-select-filled {
+  --background-color: #f5f5f5;
+  --border: 1px solid transparent;
+  --hover-background-color: #e0e0e0;
+  --hover-border-color: #1976d2;
+}
+
+/* Outlined Variant */
+.siyw-select-outlined {
+  --background-color: white;
+  --border: 2px solid #1976d2;
+  --hover-background-color: white;
+  --hover-border-color: #115293;
+}
