--- a/src/components/SayItYourWayInput/styles.css
+++ b/src/components/SayItYourWayInput/styles.css
@@ -1,7 +1,10 @@
+:root {
+  --hover-background-color: rgba(0, 0, 0, 0.04);
+  --main-font-color: rgba(0, 0, 0, 0.87);
+}
 label {
-  font-weight: bold;
-  margin-bottom: 5px;
   display: block;
+  text-align: center;
 }
 select {
   padding: 0.6em 1.2em;
@@ -13,7 +16,7 @@ select {
   border: 1px solid #646cff;
   cursor: pointer;
   transition: border-color 0.25s;
-  color: #4d56ff;
+  color: var(--main-font-color);
   width: 100%;
 }
 .input-container {
@@ -30,7 +33,7 @@ select {
 }
 
 .helper-text {
-  color: #646cff;
+  color: var(--main-font-color);
   font-size: 0.8em;
   margin-top: 0.5em;
 }
@@ -50,27 +53,29 @@ input.disabled {
   display: flex;
   flex-direction: column;
   width: 100%;
-  margin-bottom: 1rem;
 }
 
 .siyw-select-input {
   font-size: 1em;
   font-weight: 500;
   background-color: #e9ecff;
-  color: #4d56ff;
+  color: var(--main-font-color);
   cursor: pointer;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0.75rem;
-  border-radius: var(--border-radius, 4px);
   background-color: var(--background-color, white);
-  border: var(--border, 1px solid #ccc);
+  border: var(--border);
+  border-radius: var(--border-radius);
+  border-bottom: var(--border-bottom);
+  transition: border-color 0.25s;
 }
 
 .siyw-select-input:hover {
-  border-color: var(--hover-border-color, #1976d2);
+  border-color: var(--hover-border-color);
 }
+
 
 .siyw-select-dropdown {
   position: absolute;
@@ -78,27 +83,33 @@ input.disabled {
   top: 100%;
   left: 0;
   border: 1px solid #ccc;
-  border-radius: var(--border-radius, 4px);
+  border-radius: var(--border-radius);
   background-color: var(--dropdown-background-color, white);
+  box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2),
+    0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12);
   max-height: 200px;
   overflow-y: auto;
   z-index: 10;
+  padding-top: 8px;
+  padding-bottom: 8px;
 }
 
 .siyw-select-option {
-  padding: 10px;
+  padding: 6px 16px;
   display: flex;
   align-items: center;
-  color: #4d56ff;
+  color: var(--main-font-color);
+  font-size: 1rem;
+  font-weight: 500;
   cursor: pointer;
 }
 
 .siyw-select-option input {
-  margin-right: 10px;
+  margin-right: 12px;
 }
 
 .siyw-select-option:hover {
-  background-color: var(--hover-background-color, #f0f0f0);
+  background-color: var(--hover-background-color);
 }
 
 .overlay {
@@ -131,23 +142,25 @@ input.disabled {
 /* Standard Variant */
 .siyw-select-standard {
   --background-color: white;
-  --border: 1px solid #ccc;
+  --border: 0px solid transparent;
+  --border-bottom: 1px solid rgba(0, 0, 0, 0.35);
+  --border-radius: 0px;
   --hover-border-color: #1976d2;
-  --hover-background-color: #f0f0f0;
 }
 
 /* Filled Variant */
 .siyw-select-filled {
   --background-color: #f5f5f5;
   --border: 1px solid transparent;
-  --hover-background-color: #e0e0e0;
+  --border-radius: 4px;
   --hover-border-color: #1976d2;
 }
 
 /* Outlined Variant */
 .siyw-select-outlined {
   --background-color: white;
-  --border: 2px solid #1976d2;
-  --hover-background-color: white;
-  --hover-border-color: #115293;
+  --border: 1px solid rgba(0, 0, 0, 0.30);
+  --border-bottom: 1px solid rgba(0, 0, 0, 0.30);
+  --border-radius: 4px;
+  --hover-border-color: rgba(0, 0, 0, 0.87);
 }
